feat: Add support for tedious v10 to v14 (#2705)
Fixes: #2517
Co-authored-by: Trent Mick <trent.mick@elastic.co>

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -39,6 +39,8 @@ Notes:
 [float]
 ===== Features
 
+- Add support for 'tedious' version v10 to v14 ({issues}2517[#2517])
+
 - When automatically determining <<service-name>> and <<service-version>> by
   looking for a "package.json", the agent will now prefer to start looking
   from the directory of the script being executed, rather than the current
