fix: get context back for composite spans (#2716)
* fix: get context back for composite spans

Fixes: https://github.com/elastic/apm-agent-nodejs/issues/2715

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -76,6 +76,9 @@ specifying links during span creation (with the limitation that span link
 [float]
 ===== Bug fixes
 
+- Fixes a bug where the the agent would not serialize the database context of
+  a span. ({issues}2715[#2715])
+
 [float]
 ===== Chores
 
