--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,6 +31,22 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+- Fixes automatic Lambda wrapping handler to work with handler that point to
+  subfolders (`_HANDLER=path/to/folder.methodName`)
+
+[float]
+===== Chores
 
 [[release-notes-3.34.0]]
 ==== 3.34.0 2022/05/26
