--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,6 +31,23 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+* Updated `sanitizeFieldNames` and `ignoreMessageQueues` environment variables
+  to use `ELASTIC_APM_` prefix. (previous variable names are still recgonized,
+  but not documented) ({issues}2636[#2636])
+
+[float]
+===== Chores
 
 [[release-notes-3.34.0]]
 ==== 3.34.0 2022/05/26
@@ -144,9 +161,6 @@ types, because it is only expected to be useful for coming OTel Bridge work.
 
 [float]
 ===== Bug fixes
-* Updated `sanitizeFieldNames` and `ignoreMessageQueues` environment variables
-  to use `ELASTIC_APM_` prefix. (previous variable names are still recgonized,
-  but not documented) ({issues}2636[#2636])
 * Add support for node v18. ({pull}2652[#2652])
 
 * Add support for https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md[span compression].
