fix: graphql v16 support

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -52,6 +52,7 @@ Notes:
   change passing `next(<some object not an instance of Error>)` would be
   considered an error by Express, but not by the APM agent's route
   tracking. ({pull}2750[#2750])
+- Fix Graphql v16 support ({issues}2508[#2508])
 
 [float]
 ===== Chores
