--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -57,6 +57,11 @@ restore the older behavior with `contextManager: "asynchooks"`.
 [float]
 ===== Chores
 
+- The old "patch" mechanism that the APM agent uses for run-context tracking
+  (enabled via <<contextManager,`contextManager: "patch"`>>, or previously
+  enabled via `asyncHooks: false`) is now *deprecated*. It will be removed in a
+  future major version (after an 18 month deprecation period).
+
 
 [[release-notes-3.36.0]]
 ==== 3.36.0 2022/06/15
