--- a/docs/set-up.asciidoc
+++ b/docs/set-up.asciidoc
@@ -71,8 +71,7 @@ const apm = require('elastic-apm-node').start({
 [[start-option-2]]
 ===== `require('elastic-apm-node/start')`
 
-Another way to start the agent is with the `elastic-apm-node/start` module that imports and _starts_ the agent. This method is rarely used, but is necessary
-when using Babel (see <<start-gotchas,below>>). A limitation of this approach is that you cannot configure the agent with an options object, but instead have to rely on  <<configuring-the-agent,one of the other methods of configuration>>.
+Another way to start the agent is with the `elastic-apm-node/start` module that imports and _starts_ the agent. This method is rarely used, but is necessary when using Babel (see <<start-gotchas,below>>). A limitation of this approach is that you cannot configure the agent with an options object, but instead have to rely on <<configuring-the-agent,one of the other methods of configuration>>.
 
 [source,js]
 ----
@@ -103,9 +102,9 @@ node app.js
 [[start-gotchas]]
 ==== Start Gotchas
 
-This section shows some sometimes subtle surprises starting the APM agent with some technologies.
+This section shows some sometimes subtle surprises starting the APM agent with some technologies. A general troubleshooting suggestion for using the Elastic Node.js APM agent with any build tool/system that produces compiled JavaScript is to **look at the compiled JavaScript** to see what is actually being executed by `node`.
 
-
+[[start-babel]]
 ===== Babel
 
 https://babeljs.io/docs/en/[Babel] is a tool that compiles JavaScript using modern features down to JavaScript that will run in environments that don't yet support those features. One relatively common use of Babel has been to support ES module `import ...` statements and translate to CommonJS `require(...)` statements. There is a possible surprise here for starting the Elastic Node.js APM agent. Running Babel on the following produces code that does *not* work as expected:
@@ -129,7 +128,7 @@ apm.start() // This is started too late.
 // ...
 ----
 
-All imports are done first, properly following ES module semantics.  The `apm.start()` is now too late: *after* the `http` module has been imported.  This is why <<start-option-2,the `elastic-apm-node/start` module>> was added as an option. The following will work with Babel:
+All imports are done first, properly following ES module semantics. However, the `apm.start()` is now too late: *after* the `http` module has been imported.  This is why <<start-option-2,the `elastic-apm-node/start` module>> was added as a start option. The following will work with Babel:
 
 [source,js]
 ----
@@ -138,12 +137,13 @@ import http from 'http';
 // ...
 ----
 
-A more complete example is https://github.com/elastic/apm-agent-nodejs/blob/main/test/babel/src.js[here].
+A more complete example is https://github.com/elastic/apm-agent-nodejs/tree/main/test/babel[here].
 
 
+[[start-typescript]]
 ===== TypeScript
 
-TypeScript will https://github.com/Microsoft/TypeScript/wiki/FAQ#why-are-imports-being-elided-in-my-emit[elide the following import] if the `apm` variable is not used:
+TypeScript is a language that compiles to JavaScript, via the `tsc` TypeScript compiler, and is then executed via `node` (or some other JavaScript interpreter). Sometimes the produced JavaScript has a gotcha for using this APM agent. TypeScript assumes that module imports do not have side-effects, so it will https://github.com/Microsoft/TypeScript/wiki/FAQ#why-are-imports-being-elided-in-my-emit[elide the following import] if the `apm` variable is not used:
 
 [source,js]
 ----
@@ -165,17 +165,74 @@ import apm from 'elastic-apm-node/start'; apm; // Ensure import is kept for its 
 ----
 
 
+[[start-bundlers]]
 ===== Bundlers
 
-Bundlers ...
+JavaScript Bundlers are tools that bundle up a number of JavaScript files into one, or a few, JavaScript files to be executed. Often they also include other features such as compilation (from newer to older JavaScript syntax, from TypeScript), tree-shaking (removing sections of code that are unused), minifying, bundling of CSS/images, etc. There are many bundler tools, including: https://webpack.js.org/[Webpack], https://esbuild.github.io/[esbuild], https://rollupjs.org/[Rollup], https://parceljs.org/[Parcel].
 
-TODO: write this section. Perhaps rename to "Webpack and Bundlers" because we are really only showing a workaround for Webpack.
+The main use case for bundlers is for improving performance in _browser apps_, where reducing the size and number of separate files helps with network and CPU overhead. The use case is typically less strong for server-side JavaScript code executed with `node`. However, some tooling will use bundlers for server-side JavaScript, not necessarily for the _bundling_ but for some of the other features.
 
-XXX Include a blurb about the limited need for bundlers? But implicit with some tooling like Next.js?
+Unfortunately, *using a bundler typically breaks the APM agent*. Bundling multiple modules into a single file necessarily means replacing `require(...)` calls with custom bundler code that handles returning the module object. But the APM agent relies on those `require(...)` calls to instrument a module. There is no automatic fix for this. The workaround is to:
 
-XXX webpack, esbuild, swc (swc.rs), rollup (https://rollupjs.org/guide/en/), parcel (https://parceljs.org/), vite (https://vitejs.dev/),
+1. exclude the `elastic-apm-node` APM agent module from the bundle; and
+2. optionally exclude other modules from the bundle that you would like the APM agent to instrument.
+
+"Excluding" a module 'foo' from the bundle (Webpack calls these "externals") means that a `require('foo')` expects "node_modules/foo/..." to exist. This means that you need to deploy both your bundle file(s) _and_ the excluded modules. This may or may not defeat your reasons for using a bundler.
+
+The rest of this section shows how to configure externals with various bundlers. If you know of a mechanism for a bundler that we haven't documented, please https://github.com/elastic/apm-agent-nodejs/blob/main/CONTRIBUTING.md#contributing-to-the-apm-agent[let us know.]
+
+[[start-webpack]]
+====== Webpack
+
+Webpack supports https://webpack.js.org/configuration/externals/["externals"] configuration options to exclude specific modules from its bundle. At the least, the 'elastic-apm-agent' module must be made external. In addition, any modules that you want the APM agent to instrument (e.g. a database client) must also be made external. The easiest way to do this is to *use the https://github.com/liady/webpack-node-externals['webpack-node-externals'] module to make all of "node_modules/..." external*.
+
+For webpack@5 ensure your "webpack.config.js" has the following:
+
+[source,js]
+----
+const nodeExternals = require('webpack-node-externals');
+
+module.exports = {
+    // ...
+
+    // Set these so Webpack emits code using Node's CommonJS require functions
+    // and knows to use Node's core modules.
+    target: 'node',
+    externalsPresets: {
+        node: true
+    },
+
+    // This tells Webpack to make everything under "node_modules/" external.
+    externals: [nodeExternals()],
+};
+----
+
+For webpack@4, the `externalsPresets` config var does not exist, so use:
+
+[source,js]
+----
+const nodeExternals = require('webpack-node-externals');
+
+module.exports = {
+    // ...
+
+    target: 'node',
+    externals: [nodeExternals()],
+};
+----
+
+
+[[start-esbuild]]
+====== esbuild
+
+XXX `--external` ?
+
+
+
+
+XXX others at https://2021.stateofjs.com/en-US/libraries/build-tools ? WMR? Snowpack? Rome?
 
 An intro to many of these:
 https://dev.to/underscorecode/javascript-bundlers-an-in-depth-comparative-is-webpack-still-the-best-bundler-in-2021-59jk
-
+incl getting started with esbuild.config.js
 
